--- a/CoffeCheap/web/Mesero_Temporal.xhtml
+++ b/CoffeCheap/web/Mesero_Temporal.xhtml
@@ -8,7 +8,7 @@
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
       xmlns:b="http://bootsfaces.net/ui">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Mesero_Temporal</title>
         <!-- Compiled and minified CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"/>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -53,7 +53,7 @@
                         <b:dataTableColumn value="#{lst.cantidad}" label="Cantidad"/>
                         <b:dataTableColumn value="#{lst.descripcion}" label="Descripcion"/>
                         <b:dataTableColumn label="Opciones"> 
-                            <b:commandButton value="Modificar" actionListener="#{mesero_Temporal.leerId(lst)}" oncomplete="PF('wdlgdatos').show();" update=":dlgdatos"/>
+                            
                             <b:commandButton value="Eliminar" actionListener="#{mesero_Temporal.eliminar(lst)}" update="hola"/>
                         </b:dataTableColumn>
 
