--- a/CoffeCheap/web/Control_Mesa.xhtml
+++ b/CoffeCheap/web/Control_Mesa.xhtml
@@ -55,16 +55,16 @@
           <p:dialog widgetVar="dlg" modal="true" resizable="false" header="Registrar Cliente" showEffect="fade"> 
             <p:panelGrid id="display" columns="2" columnClasses="label,value">
 
-              <p:outputLabel value="ingrese id  "/>
+              <p:outputLabel value="ingrese id  " style="color: black"/>
               <p:inputText  value="#{clienteBean.cliente.id_cliente}"/>
 
-              <p:outputLabel value="ingrese nit  "/>
+              <p:outputLabel value="ingrese nit  " style="color: black"/>
               <p:inputText  value="#{clienteBean.cliente.nit_cliente}"/>
 
-              <p:outputLabel value="ingrese nombre "/>
+              <p:outputLabel value="ingrese nombre " style="color: black"/>
               <p:inputText  value="#{clienteBean.cliente.nombre}"/>
 
-              <p:outputLabel value="ingrese Direccion  "/>
+              <p:outputLabel value="ingrese Direccion  " style="color: black"/>
               <p:inputText  value="#{clienteBean.cliente.direccion}"/>
 
               <p:commandButton value="Buscar" actionListener="#{clienteBean.buscar()}" update="display"/>
