--- a/CoffeCheap/web/Reserva_ingresar.xhtml
+++ b/CoffeCheap/web/Reserva_ingresar.xhtml
@@ -28,6 +28,10 @@
             <br/>
              <p:outputLabel value="id cliente" />
              <p:autoComplete id="cliente" value="#{reservaBean.reserva.cliente.id_cliente}"/> 
+               <br/>
+             <p:outputLabel value="id mesa" />
+             <p:autoComplete  value="#{reservaBean.reserva.mesa.id_mesa}"/>
+             <br/>
             <p:commandButton value="Guardar" actionListener="#{reservaBean.registrar()}"/>
         </h:form>
    
