--- a/CoffeCheap/web/Mesa_Modificar.xhtml
+++ b/CoffeCheap/web/Mesa_Modificar.xhtml
@@ -17,7 +17,7 @@
         <f:event type="preRenderView" listener="#{mesaBean.listar()}" />
         <h:form class="flip">
           
-            <p:outputLabel style="color: #ffffff;" value="Lista para escoger tipo de trasaccion a eliminar"/>          
+            <p:outputLabel style="color: black;" value="Lista para escoger tipo de trasaccion a eliminar"/>          
          
         </h:form>
         <h:form id="otro">
@@ -27,19 +27,19 @@
 
               <p:column>
                 <f:facet name="header">Codigo</f:facet>
-                <h:inputText value="#{tabla.id_mesa}" style="color: #ffffff; width : 30px" />
+                <h:inputText value="#{tabla.id_mesa}" style="color: black; width : 30px" />
               </p:column>
               <p:column>
                 <f:facet name="header">Cantidad</f:facet>
-                <h:inputText value="#{tabla.cantidad_comensales}" style="color: #ffffff; width : 160px" />
+                <h:inputText value="#{tabla.cantidad_comensales}" style="color: black; width : 160px" />
               </p:column>
               <p:column>
                 <f:facet name="header">Ubicacion</f:facet>
-                <h:inputText value="#{tabla.ubicacion}" style="color: #ffffff; width : 160px" />
+                <h:inputText value="#{tabla.ubicacion}" style="color: black; width : 160px" />
               </p:column>
               <p:column>
                 <f:facet name="header">id estado</f:facet>
-                <h:inputText value="#{tabla.estMesa.id_estado}" style="color: #ffffff; width : 160px" />
+                <h:inputText value="#{tabla.estMesa.id_estado}" style="color: black; width : 160px" />
               </p:column>                                        
 
             </p:dataList>
