--- a/CoffeCheap/web/Compra_Eliminar.xhtml
+++ b/CoffeCheap/web/Compra_Eliminar.xhtml
@@ -3,19 +3,34 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:b="http://bootsfaces.net/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
         <ui:composition template="./WEB-INF/template/Template.xhtml">
             <ui:define name="content">
+                <f:event type="preRenderView" listener="#{compraBean.Mostrar()}"/>
                 <h:form id="form1">
                     <h:panelGrid id="panel1" columns="2" cellpadding="5" style="color: #ffffff">
                     <p:outputLabel for="Codigo" value="Codigo"/>
                     <p:inputText id="Codigo" value="#{compraBean.compra.id_compras}"/>
                     </h:panelGrid><br/>
                     <p:commandButton value="Eliminar" action="#{compraBean.Eliminar()}" update="form1"/>
+                    
+                    <b:dataTable value="#{compraBean.lista}" var="compra" col-md="12">
+                        <b:dataTableColumn value="#{compra.id_compras}" label="Codigo de Compra" />
+                        <b:dataTableColumn value="#{compra.ocompras.id_orden_compras}" label="No. Orden" />
+                        <b:dataTableColumn value="#{compra.ocompras.pproductos.proveedor.nombre}" label="Nombre Proveedor"/>
+                        <b:dataTableColumn value="#{compra.ocompras.cantidad}" label="Cantidad de Orden"/>
+                        <b:dataTableColumn value="#{compra.ocompras.pproductos.producto.nombre}" label="Producto"/>
+                        <b:dataTableColumn value="#{compra.cantidad}" label="Cantidad"/>
+                        <b:dataTableColumn value="#{compra.costo}" label="Costo"/>
+                        <b:dataTableColumn value="#{compra.no_fac}" label="No. de Factura"/>
+                        <b:dataTableColumn value="#{compra.serie}" label="Serie"/>
+                    </b:dataTable>
                 </h:form>
             </ui:define>
         </ui:composition>
