--- a/CoffeCheap/web/Proveedor_Modificar.xhtml
+++ b/CoffeCheap/web/Proveedor_Modificar.xhtml
@@ -3,15 +3,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:b="http://bootsfaces.net/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-         <ui:composition template="./WEB-INF/template/Template.xhtml">
+        <ui:composition template="./WEB-INF/template/Template.xhtml">
 
             <ui:define name="content">
-
+                <f:event type="preRenderView" listener="#{proveedorBean.Mostrar()}"/>
                 <h:form id="form1">
                     <h:panelGrid id="general" columns="2" cellpadding="5">
                         <p:outputLabel for="codigo" value="Codigo"/>
@@ -28,7 +30,18 @@
                         <p:inputText id="direccion" value="#{proveedorBean.proveedor.direccion}"/>
                     </h:panelGrid><br/>
                     <p:commandButton value="Modificar" action="#{proveedorBean.Modificar()}" update="form1"/>
+
+                    <b:dataTable value="#{proveedorBean.listar}" var="proveedor" col-md="12">
+                        <b:dataTableColumn value="#{proveedor.id_proveedor}" label="Codigo" />
+                        <b:dataTableColumn value="#{proveedor.nombre}" label="Nombre"/>
+                        <b:dataTableColumn value="#{proveedor.nit}" label="Nit"/>
+                        <b:dataTableColumn value="#{proveedor.telefono}" label="Telefono"/>
+                        <b:dataTableColumn value="#{proveedor.mail}" label="E-mail"/>
+                        <b:dataTableColumn value="#{proveedor.direccion}" label="Dirección"/>
+                    </b:dataTable>
                 </h:form>
+
+
             </ui:define>
 
         </ui:composition>
