--- a/CoffeCheap/web/Estado_mesa_Modificar.xhtml
+++ b/CoffeCheap/web/Estado_mesa_Modificar.xhtml
@@ -17,7 +17,7 @@
         <f:event type="preRenderView" listener="#{estado_mesaBean.listar()}"/>
         <h:form class="flip">
           
-            <p:outputLabel style="color: #ffffff;" value="Lista para modificar el estado de mesa" />          
+            <p:outputLabel style="color: #000000;" value="Lista para modificar el estado de mesa" />          
          
         </h:form>
         <h:form id="otro">
@@ -29,11 +29,11 @@
 
               <p:column>
                 <f:facet name="header">Codigo de la trasaccion</f:facet>
-                <h:inputText value="#{tabla.id_estado}" style="color: #ffffff; width : 30px" />
+                <h:inputText value="#{tabla.id_estado}" style="color: #000000; width : 30px" />
               </p:column>
               <p:column>
                 <f:facet name="header">Nombre de la trasaccion</f:facet>
-                <h:inputText value="#{tabla.nombre}" style="color: #ffffff; width : 160px" />
+                <h:inputText value="#{tabla.nombre}" style="color: #000000; width : 160px" />
               </p:column>
 
               <p:column>
