--- a/CoffeCheap/web/Orden_compras_Eliminar.xhtml
+++ b/CoffeCheap/web/Orden_compras_Eliminar.xhtml
@@ -17,7 +17,7 @@
         <h:form class="flip">
           <f:event type="preRenderView"  listener="#{orden_comprasBean.Mostrar}"/>
           <f:event type="preRenderView" listener="#{proveedorBean.Mostrar()}"/>
-          <p:outputLabel style="color: #ffffff;" value="Lista para escoger orden de transaccion a Modificar" />          
+          <p:outputLabel style="color: #000000;" value="Lista para escoger orden de transaccion a Modificar" />          
 
         </h:form>
         <h:form id="otro">
@@ -29,23 +29,23 @@
 
               <p:column>
                 <f:facet name="header">id_orden compras</f:facet>
-                <h:inputText value="#{tabla.id_orden_compras}" style="color: #ffffff; width : 50px" />
+                <h:inputText value="#{tabla.id_orden_compras}" style="color: #000000; width : 50px" />
               </p:column>
               <p:column>
                 <f:facet name="header">Fecha Orden</f:facet>
-                <h:inputText value="#{tabla.fecha_orden}" style="color: #ffffff; width : 120px" />
+                <h:inputText value="#{tabla.fecha_orden}" style="color: #000000; width : 120px" />
               </p:column>
               <p:column>
                 <f:facet name="header">Fecha Entrega</f:facet>
-                <h:inputText value="#{tabla.fecha_entrega}" style="color: #ffffff; width : 80px" />
+                <h:inputText value="#{tabla.fecha_entrega}" style="color: #000000; width : 80px" />
               </p:column>
               <p:column>
                 <f:facet name="header">Cantidad Orden</f:facet>
-                <h:inputText value="#{tabla.cantidad}" style="color: #ffffff; width : 80px" />
+                <h:inputText value="#{tabla.cantidad}" style="color: #000000; width : 80px" />
               </p:column>
               <p:column>
                 <f:facet name="header">Id Producto</f:facet>              
-                <p:selectOneMenu id="lis2" style="width:125px; background-color: #ffffff" value="#{tabla.pproductos.proveedor.id_proveedor}" > 
+                <p:selectOneMenu id="lis2" style="width:125px; background-color: #000000" value="#{tabla.pproductos.proveedor.id_proveedor}" > 
 
                   <f:selectItems value="#{proveedorBean.listar}" var="lista1" itemLabel="#{lista1.nombre}" itemValue="#{lista1.id_proveedor}"/>      
 
@@ -54,7 +54,7 @@
               <p:column>
 
                 <f:facet name="header">id proveedor</f:facet>
-                <p:selectOneMenu id="lis1" style="width:125px; background-color: #ffffff" value="#{tabla.pproductos.producto.id_producto}" > 
+                <p:selectOneMenu id="lis1" style="width:125px; background-color: #000000" value="#{tabla.pproductos.producto.id_producto}" > 
 
                   <f:selectItems value="#{orden_comprasBean.lstProveedor_productos}" var="listapro" itemLabel="#{listapro.producto.nombre}" itemValue="#{listapro.producto.id_producto}"/>      
                 </p:selectOneMenu> 
@@ -62,7 +62,7 @@
               </p:column>
               <p:column>
                 <f:facet name="header">precio</f:facet>
-                <h:inputText value="#{tabla.precio}" style="color: #ffffff; width : 80px" />
+                <h:inputText value="#{tabla.precio}" style="color: #000000; width : 80px" />
               </p:column>          
 
               <p:column>
