--- a/CoffeCheap/web/Mesa_Guardar.xhtml
+++ b/CoffeCheap/web/Mesa_Guardar.xhtml
@@ -17,7 +17,7 @@
         <h:form class="flip">
           <f:event type="preRenderView"  listener="#{estado_mesaBean.listar()}"/>
 
-          <h:panelGrid id="desplegar1" columns="2" cellpadding="5" border="1">
+          <p:panelGrid id="desplegar1" columns="2">
 
             <p:outputLabel value="id_mesa" />
             <p:autoComplete id="Codig" value="#{mesaBean.mesa.id_mesa}" style="color: black;"/>                         
@@ -33,7 +33,7 @@
               <f:selectItems value="#{estado_mesaBean.lstEstado_mesa}" var="tip" itemLabel="#{tip.nombre}" itemValue="#{tip.id_estado}"/>                      
             </p:selectOneMenu> 
                                                
-          </h:panelGrid>
+          </p:panelGrid>
 
 
           <p:commandButton value="Guardar" update="display" oncomplete="PF('dlg').show()" actionListener="#{mesaBean.registrar()}"/>
