--- a/CoffeCheap/web/Pedido_Modificar.xhtml
+++ b/CoffeCheap/web/Pedido_Modificar.xhtml
@@ -10,50 +10,52 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 
-  <h:body>
+  <h:body class="ui-g">
     <ui:composition template="./WEB-INF/template/Template.xhtml">
       <ui:define name="content">
 
         <f:event type="preRenderView" listener="#{pedidoBean.listar()}"/>
         <f:event type="preRenderView" listener="#{mesaBean.listar()}"/>
-        <f:event type="preRenderView" listener="#{usuarioBean.listarMe()}"/>
+        <f:event type="preRenderView" listener="#{usuarioBean.listar()}"/>
         <h:form class="flip">
 
-          <p:outputLabel style="color: #ffffff;" value="Lista para escoger Pedido a Modificar" />          
+          <p:outputLabel style="color: #oooooo;" value="Lista para escoger Pedido a Modificar" />          
 
         </h:form>
         <h:form id="otro">
 
 
-          <p:panelGrid id="display1" columns="4" columnClasses="label,value">          
-            <p:dataList value="#{pedidoBean.lstPedido}" var="tabla" type="unordered" itemType="none" paginator="true" rows="10" styleClass="paginated">
-
-              <p:column>
-                <f:facet name="header">Id Pedido</f:facet>
-                <h:inputText value="#{tabla.id_pedido}" style="color: #ffffff; width : 30px" />
-              </p:column>
+          <p:panelGrid id="display1" columns="4" columnClasses="label,value" >          
+            <p:dataList value="#{pedidoBean.lstPedido}" var="tabla" widgetVar="tablaTable" type="unordered" itemType="none" paginator="true" rows="10" styleClass="paginated">
 
               <p:column>               
-                <p:outputLabel for="lisx" value="mesa:" style="color: #ffffff" />
+                <p:outputLabel  value="Id Pedido:" style="color: #oooooo" />
+                <h:inputText value="#{tabla.id_pedido}" style=" width : 30px" />
+              </p:column>
+
+              <p:column>
+
+                <p:outputLabel  value="mesa:" style="color: #oooooo" />
                 <p:selectOneMenu id="lisx" style="width:200px" value="#{tabla.mesa.id_mesa}"> 
                   <f:selectItems value="#{mesaBean.lstMesa}" var="tip" itemLabel="#{tip.ubicacion}" itemValue="#{tip.id_mesa}"/>                        
                 </p:selectOneMenu>
               </p:column>
 
               <p:column>
+                <p:outputLabel for="lisx" value="Hora:" style="color: #oooooo" />
                 <f:facet name="header">hora</f:facet>
-                <h:inputText value="#{tabla.hora}" style="color: #ffffff; width : 160px" />
+                <p:outputLabel value="hora" />
+                <h:inputText value="#{tabla.hora}" style="width : 160px" />
               </p:column>
 
               <p:column>               
 
-                <p:outputLabel for="lis" value="personal:" style="color: #ffffff"/>
+                <p:outputLabel for="lis" value="personal:" style="color: #oooooo"/>
                 <p:selectOneMenu id="lis" style="width:200px" value="#{tabla.usuario.id}"> 
-                  <f:selectItems value="#{usuarioBean.lstUsuarioMe}" var="tip" itemLabel="#{tip.nombre}" itemValue="#{tip.id}"/>      
-                  <p:ajax event="change" update="@this" />      
+                  <f:selectItems value="#{usuarioBean.lstUsuario}" var="tip" itemLabel="#{tip.nombre}" itemValue="#{tip.id}"/>                         
                 </p:selectOneMenu>  
 
-              </p:column>                      
+              </p:column>              
 
               <p:column>
                 <h:commandLink value="Modificar" style="color: #ffffff" actionListener="#{pedidoBean.modificar(tabla)}"/>                    
