--- a/CoffeCheap/web/Orden_compras_Guardar.xhtml
+++ b/CoffeCheap/web/Orden_compras_Guardar.xhtml
@@ -24,10 +24,10 @@
             <p:autoComplete id="Codig" value="#{orden_comprasBean.orden_compras.id_orden_compras}"/>                         
 
             <p:outputLabel  value="Fecha de Orden" />
-            <p:calendar id="Orden" value="#{orden_comprasBean.orden_compras.fecha_orden}" pattern="yyyy-MM-dd" locale="es"/>
+            <p:calendar id="Orden" value="#{orden_comprasBean.orden_compras.fecha_orden}" locale="es"/>
 
             <p:outputLabel  value="Fecha de Entrega" />
-            <p:calendar id="Entrega" value="#{orden_comprasBean.orden_compras.fecha_entrega}" pattern="yyyy-MM-dd" locale="es"/>
+            <p:calendar id="Entrega" value="#{orden_comprasBean.orden_compras.fecha_entrega}" locale="es"/>
 
             <p:outputLabel  value="Cantidad Orden" />
             <p:autoComplete id="Cantidad" value="#{orden_comprasBean.orden_compras.cantidad}"/>
@@ -55,24 +55,21 @@
           <p:dialog widgetVar="dlg" modal="true" resizable="false" header="Valores Guardados" showEffect="fade"> 
             <p:panelGrid id="display" columns="2" columnClasses="label,value">
 
-              <h:outputText value="id_orden_compras" />
+              <h:outputText value="id_orden_compras" style="color: #000000"/>
               <h:outputText id="compra1" value="#{orden_comprasBean.orden_compras.id_orden_compras}" />                         
 
-              <h:outputText value="fecha orden" />
+              <h:outputText value="fecha orden" style="color: #000000"/>
               <h:outputText id="orden1" value="#{orden_comprasBean.orden_compras.fecha_entrega}" />
 
-              <h:outputText value="Fecha entrega" />
+              <h:outputText value="Fecha entrega" style="color: #000000"/>
               <h:outputText id="entrega1" value="#{orden_comprasBean.orden_compras.fecha_orden}" />
 
-              <h:outputText value="id producto" />
+              <h:outputText value="id producto" style="color: #000000"/>
               <h:outputText id="producto1" value="#{orden_comprasBean.orden_compras.pproductos.producto.id_producto}" />
 
-              <h:outputText value="id proveedor" />
+              <h:outputText value="id proveedor" style="color: #000000"/>
               <h:outputText id="proveedor1" value="#{orden_comprasBean.orden_compras.pproductos.proveedor.id_proveedor}" />
-
-              <h:outputText value="precio" />
-              <h:outputText id="precio1" value="#{orden_comprasBean.orden_compras.precio}" />
-
+              
             </p:panelGrid>
           </p:dialog>
 
