--- a/CoffeCheap/web/Plato_Guardar.xhtml
+++ b/CoffeCheap/web/Plato_Guardar.xhtml
@@ -8,7 +8,7 @@
     <h:head>
         <title>Facelet Title</title>
     </h:head>
-    <h:body>
+    <h:body class="ui-g">
         <ui:composition template="./WEB-INF/template/Template.xhtml">
       <ui:define name="content">
 
